--- a/app/styles/components/header.less
+++ b/app/styles/components/header.less
@@ -24,7 +24,100 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0,0,0,.5);
+      background-color: rgba(0,0,0,.7);
     }
+  }
+}
+
+
+.welcome-area{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+.welcome-face{
+  display: inline-block;
+  width: 110px;
+  height: 110px;
+  border: 6px solid rgba(255,255,255,.6);
+  overflow: hidden;
+  border-radius: 50%;
+  img{
+    width: 100%;
+    height: 100%;
+  }
+}
+.welcome-text{
+  margin-top: 40px;
+  h2{
+    font-size: 50px;
+    font-weight: 300;
+    color: #fff;
+    text-align: center;
+    letter-spacing: 10px;
+  }
+  h3{
+    font-size: 16px;
+    color: #fff;
+    font-weight: normal;
+  }
+  .p-tel{
+    display: inline-block;
+    border: 1px solid #ccc;
+    padding: 4px 20px ;
+    color: #ccc;
+  }
+}
+
+.call-me{
+  display: inline-block;
+  margin-top: 40px;
+  a{
+    border: 1px solid;
+    border-radius: 50px;
+    color: #ffcc33;
+    letter-spacing: 2px;
+    margin-right: 20px;
+    padding: 10px 20px;
+    &:last-child{
+      margin-right: 0;
+    }
+  }
+}
+
+.mouse-button{
+  position: absolute;
+  left: 50%;
+  bottom: 30px;
+  margin-left: -16px;
+  a{
+    border: 1px solid;
+    border-radius: 50px;
+    color: #ffffff;
+    font-size: 12px;
+    padding: 10px 5px;
+    text-transform: uppercase;
+    i{
+      animation: scroll-down 1.5s infinite;
+    }
+  }
+}
+
+@keyframes scroll-down {
+  from {
+    transform: translateY(-5px);
+    opacity: 1;
+  }
+
+  to {
+    transform: translateY(6px);
+    opacity: 0;
   }
 }
