--- a/app/styles/index.less
+++ b/app/styles/index.less
@@ -5,3 +5,5 @@ html, body {
 @import "components/preload";
 @import "components/header";
 @import "components/nav";
+@import "components/about";
+@import "components/skill";
