--- a/app/styles/index.less
+++ b/app/styles/index.less
@@ -1,7 +1,9 @@
 html, body {
   height: 100%;
 }
-
+body{
+  position: relative;
+}
 @import "components/preload";
 @import "components/header";
 @import "components/nav";
