--- a/app/styles/index.less
+++ b/app/styles/index.less
@@ -4,10 +4,11 @@ html, body {
 body{
   position: relative;
 }
-@import "components/preload";
-@import "components/header";
-@import "components/nav";
-@import "components/about";
-@import "components/skill";
-@import "components/experience";
-@import "components/work";
+@import "preload";
+@import "header";
+@import "nav";
+@import "about";
+@import "skill";
+@import "experience";
+@import "work";
+@import "footer";
