--- a/app/styles/work.less
+++ b/app/styles/work.less
@@ -15,6 +15,10 @@
     padding: 45px 50px;
     opacity: 0;
     transition: all .3s;
+    p{
+      color: #fff;
+      font-size: 12px;
+    }
     &:before{
       content: "";
       position: absolute;
@@ -50,6 +54,50 @@
       }
       &:after{
         transform: scaleX(1);
+      }
+    }
+  }
+  .gallery-ewm{
+    position: absolute;
+    display: block;
+    background-color: rgba(0,0,0,.5);
+    color: #fecb45;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: .3s all;
+    .w-qr{
+      background-color: #fff;
+      width: 100px;
+      margin: 60px auto 0;
+      padding: 10px 10px 5px;
+      transition: .3s all .3s;
+      opacity: 0;
+      transform: scale(0,0);
+      img{
+        display: block;
+        width: 80px;
+        height: 80px;
+      }
+      font-size: 12px;
+      color: #666;
+    }
+
+    h4{
+      margin-top: 20px;
+    }
+    p{
+      font-size: 12px;
+      color: #fff;
+    }
+    &:hover{
+      opacity: 1;
+      .w-qr{
+        opacity: 1;
+        transform: scale(1,1);
       }
     }
   }
